// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MakeImage matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1"
  >
    <ul
      class="MuiGridList-root makeStyles-gridlist-2"
      style="margin: 0px;"
    >
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="productName1"
            src="src1"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="productName2"
            src="src2"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="productName3"
            src="src3"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="productName4"
            src="src4"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="twitterId"
            src="image"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="productName5"
            src="src5"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="productName6"
            src="src6"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="productName7"
            src="src7"
          />
        </div>
      </li>
      <li
        class="MuiGridListTile-root"
        style="width: 33.333333333333336%; height: 120px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="productName8"
            src="src8"
          />
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`MakeImage matches snapshot 2`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1"
  >
    <ul
      class="MuiGridList-root makeStyles-gridlist-2"
      style="margin: 0px;"
    >
      <li
        class="MuiGridListTile-root"
        style="width: 100%; height: 360px; padding: 0px;"
      >
        <div
          class="MuiGridListTile-tile"
        >
          <img
            alt="productName"
            src="src"
          />
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
